@@ -257,6 +257,8 @@
 .set	XSOM_DeregisterClient, 0x058584 + X_Bit
 .set	XSOM_MapObject, 0x058590 + X_Bit
 
+.set	SULPROC_STATUS_FLAG_IS_FORKED, (1 << 21)
+.set	SULPROC_STATUS_FLAG_IS_EXECED, (1 << 22)
 .set	SULPROC_STATUS_FLAG_IS_DYNAMIC, (1 << 23)
 .set	SULPROC_STATUS_FLAG_IS_ARMEABI, (1 << 24)
 
